fixed filter spacing

--- a/src/components/agenda.sass
+++ b/src/components/agenda.sass
@@ -3,6 +3,7 @@
 .agenda
   margin: 0 auto
   width: 90%
+  padding-bottom: 20px
   h1
     text-align: center
     color: $black
@@ -93,6 +94,7 @@
 
       .selectArrow
         height: unset
+        margin-bottom: 10px
   .agenda-results
     display: flex;
     flex-wrap: wrap;
